--- a/Coding_Newbee_World/cpp.html
+++ b/Coding_Newbee_World/cpp.html
@@ -90,9 +90,11 @@
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #1976D2;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Coding Newbee World</h1>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">C/C++</h1>
           <p class="lead">
-            <br>코딩 입문자와 초심자들을 위한 세계<br>C/C++와 Java, Python의<br>기초 문법과 간단한 문제까지<br>천천히 알려주는 사이트입니다.
+            <br>C++은 게임 개발, 시스템 프로그래밍, OS 등<br>
+            성능과 유연성을 동시에 필요로 하는 분야에서 각광받고 있습니다.<br>
+            특히 Unreal Engine 같은 유명한 게임 엔진도 C++로 만들어졌습니다.<br>
           </p>
         </div>
     
@@ -101,13 +103,13 @@
           <div id="imageCarousel" class="carousel slide bg-white rounded-lg-3 shadow-lg" data-bs-ride="carousel" style="width: 75%;">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/icons8_c++.svg" class="d-block w-100" alt="C++">
+                <img src="img/cppImg/icons8_unreal.svg" class="d-block w-100" alt="Unreal">
               </div>
               <div class="carousel-item">
-                <img src="img/icons8_java.svg" class="d-block w-100" alt="Java">
+                <img src="img/cppImg/icons8_chrome.svg" class="d-block w-100" alt="Java">
               </div>
               <div class="carousel-item">
-                <img src="img/icons8_python.svg" class="d-block w-100" alt="Python">
+                <img src="img/cppImg/icons8_windows.svg" class="d-block w-100" alt="Python">
               </div>
             </div>
             <!-- Carousel 컨트롤 버튼 -->
