--- a/Coding_Newbee_World/cpp.html
+++ b/Coding_Newbee_World/cpp.html
@@ -49,11 +49,15 @@
         font-family: 'Noto Sans KR', 'Montserrat', sans-serif;
         font-weight: 400;
       }
+
+      .sticky-sidebar {
+        position: sticky;
+        top: 20px; /* 화면 상단에서 20px 떨어진 위치에 고정 */
+        height: calc(100vh - 20px); /* 높이 계산 */
+      }
     </style>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-
     <!-- Navbar block -->
     <nav class="navbar navbar-expand-lg bg-light border-bottom">
       <div class="container-fluid">
@@ -86,6 +90,7 @@
       </div>
     </nav>
 
+    <!--hero tag-->
     <div class="container-fluid my-3">
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #1976D2;">
         <!-- 텍스트 영역 -->
@@ -121,6 +126,29 @@
               <span class="carousel-control-next-icon" aria-hidden="true" style="filter: invert(1);"></span>
               <span class="visually-hidden">다음</span>
             </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="sticky-sidebar p-3 bg-light">
+            <h4>Sidebar</h4>
+            <ul class="nav flex-column">
+              <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Link 1</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-9">
+          <div class="content p-3">
+            <h1>Main Content</h1>
+            <p>스크롤하면 사이드바가 따라옵니다!</p>
+            <p>여러 줄의 콘텐츠를 추가하여 스크롤을 만들어 보세요...</p>
+            <div style="height: 1500px;"></div> <!-- 긴 스크롤 영역 -->
           </div>
         </div>
       </div>
@@ -170,5 +198,6 @@
           </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
