--- a/Coding_Newbee_World/Java.html
+++ b/Coding_Newbee_World/Java.html
@@ -109,14 +109,14 @@
 
     <!--hero block-->
     <div class="container-fluid my-3">
-      <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #1976D2;">
+      <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #FF7043;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">C/C++</h1>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Java</h1>
           <p class="lead">
-            <br>C++은 게임 개발, 시스템 프로그래밍, OS 등<br>
-            성능과 유연성을 동시에 필요로 하는 분야에서 각광받고 있습니다.<br>
-            특히 Unreal Engine 같은 유명한 게임 엔진도 C++로 만들어졌습니다.<br>
+            <br>Java는 전 세계에서 널리 사용되는 쉽고 강력한 프로그래밍 언어입니다.<br>
+            한 번 작성하면 어디서든 실행 가능한 유연함을 갖췄습니다.<br>
+            앱, 웹, 게임, 서버 개발까지 — Java로 무엇이든 시작해봅시다.<br>
           </p>
         </div>
     
