add Image, java.html

--- a/Coding_Newbee_World/Java.html
+++ b/Coding_Newbee_World/Java.html
@@ -125,13 +125,13 @@
           <div id="imageCarousel" class="carousel slide bg-white rounded-lg-3 shadow-lg" data-bs-ride="carousel" style="width: 75%;">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/javaImg/icons8_unreal.svg" class="d-block w-100" alt="Unreal">
+                <img src="img/javaImg/icons8-intellij-idea.svg" class="d-block w-100" alt="IntelliJ">
               </div>
               <div class="carousel-item">
-                <img src="img/cppImg/icons8_chrome.svg" class="d-block w-100" alt="Java">
+                <img src="img/javaImg/icons8-signal.svg" class="d-block w-100" alt="Signal Private Messenger">
               </div>
               <div class="carousel-item">
-                <img src="img/cppImg/icons8_windows.svg" class="d-block w-100" alt="Python">
+                <img src="img/javaImg/icons8-minecraft.svg" class="d-block w-100" alt="MineCraft">
               </div>
             </div>
             <!-- Carousel 컨트롤 버튼 -->
