--- a/Coding_Newbee_World/Java.html
+++ b/Coding_Newbee_World/Java.html
@@ -160,6 +160,7 @@
               <li class="nav-item"><a class="nav-link active linkdeco" href="#variable">변수/Variable</a></li>
               <li class="nav-item"><a class="nav-link linkdeco" href="#input">Scanner</a></li>
               <li class="nav-item"><a class="nav-link linkdeco" href="#array">배열/Array</a></li>
+              <li class="nav-item"><a class="nav-link linkdeco" href="#string">문자열/String</a></li>
               <li class="nav-item"><a class="nav-link linkdeco" href="#class">class</a></li>
             </ul>
           </div>
@@ -222,7 +223,7 @@
                 </p>
                 <hr>
             <!--input-->
-            <h1 id="import">Scanner</h1>
+            <h1 id="input">Scanner</h1>
                 <pre><code class="language-java">
     import java.util.Scanner;
     
