repair ex, font-color

--- a/Coding_Newbee_World/Python.html
+++ b/Coding_Newbee_World/Python.html
@@ -79,6 +79,10 @@
         color: black;
       }
 
+      .font-white
+      {
+        color: #E5E5E5;
+      }
     </style>
   </head>
   <body>
@@ -120,7 +124,7 @@
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Python</h1>
-          <p class="lead">
+          <p class="lead font-white">
             <br>누구나 쉽게 시작할 수 있는 프로그래밍 언어입니다.<br>
             문법이 간단하고 읽기 쉬워 코딩이 처음인 분께도 적합합니다.<br>
             웹, 데이터, 인공지능까지 모두 파이썬으로 가능합니다.<br>
