--- a/Coding_Newbee_World/cpp.html
+++ b/Coding_Newbee_World/cpp.html
@@ -72,6 +72,10 @@
         font-size: 1.5rem;
       }
 
+      .font-white
+      {
+        color: #E5E5E5;
+      }
     </style>
   </head>
   <body>
@@ -113,7 +117,7 @@
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold lh-1 text-body-emphasis">C/C++</h1>
-          <p class="lead">
+          <p class="lead font-white">
             <br>C++은 게임 개발, 시스템 프로그래밍, OS 등<br>
             성능과 유연성을 동시에 필요로 하는 분야에서 각광받고 있습니다.<br>
             특히 Unreal Engine 같은 유명한 게임 엔진도 C++로 만들어졌습니다.<br>
