--- a/Coding_Newbee_World/Java.html
+++ b/Coding_Newbee_World/Java.html
@@ -72,6 +72,10 @@
         font-size: 1.5rem;
       }
 
+      .font-white
+      {
+        color: #E5E5E5;
+      }
     </style>
   </head>
   <body>
@@ -113,7 +117,7 @@
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Java</h1>
-          <p class="lead">
+          <p class="lead font-white">
             <br>Java는 전 세계에서 널리 사용되는 쉽고 강력한 프로그래밍 언어입니다.<br>
             한 번 작성하면 어디서든 실행 가능한 유연함을 갖췄습니다.<br>
             앱, 웹, 게임, 서버 개발까지 — Java로 무엇이든 시작해봅시다.<br>
