--- a/Coding_Newbee_World/ex.html
+++ b/Coding_Newbee_World/ex.html
@@ -72,6 +72,10 @@
         font-size: 1.5rem;
       }
 
+      .font-white
+      {
+        color: #E5E5E5;
+      }
     </style>
   </head>
   <body>
@@ -109,14 +113,13 @@
 
     <!--hero block-->
     <div class="container-fluid my-3">
-      <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #FF7043;">
+      <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #263238;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Java</h1>
-          <p class="lead">
-            <br>Java는 전 세계에서 널리 사용되는 쉽고 강력한 프로그래밍 언어입니다.<br>
-            한 번 작성하면 어디서든 실행 가능한 유연함을 갖췄습니다.<br>
-            앱, 웹, 게임, 서버 개발까지 — Java로 무엇이든 시작해봅시다.<br>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Example</h1>
+          <p class="lead font-white">
+            <br>지금까지 배운 내용을 복습하면서<br>
+            문제를 풀어봅시다.<br>
           </p>
         </div>
     
