--- a/Coding_Newbee_World/index.html
+++ b/Coding_Newbee_World/index.html
@@ -49,6 +49,10 @@
         font-family: 'Noto Sans KR', 'Montserrat', sans-serif;
         font-weight: 400;
       }
+      .font-white
+      {
+        color: #E5E5E5;
+      }
     </style>
   </head>
   <body>
@@ -91,7 +95,7 @@
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Coding Newbee World</h1>
-          <p class="lead">
+          <p class="lead font-white">
             <br>코딩 입문자와 초심자들을 위한 세계<br>C/C++와 Java, Python의<br>기초 문법과 간단한 문제까지<br>천천히 알려주는 사이트입니다.
           </p>
         </div>
