--- a/Coding_Newbee_World/index.html
+++ b/Coding_Newbee_World/index.html
@@ -62,7 +62,9 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom">
       <div class="container-fluid">
         <!-- 좌측 로고 (오른쪽으로 1rem 이동) -->
-        <a class="navbar-brand fw-bold logo-text ms-5" href="./index.html">CNW</a>
+        <a class="navbar-brand fw-bold logo-text ms-5" href="./index.html">
+          <img src="img/LogoImg/cnw.png" alt="CNW" style="width: 6.5rem; height: 3.25rem;">
+        </a>
       
         <!-- 토글 버튼 (작은 화면용) -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
