repair hero section

--- a/Coding_Newbee_World/index.html
+++ b/Coding_Newbee_World/index.html
@@ -92,11 +92,12 @@
       </div>
     </nav>
 
+    <!--hero block-->
     <div class="container-fluid my-3">
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #1976D2;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Coding Newbee World</h1>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis "style="font-size: 4.5rem;">Coding Newbee World</h1>
           <p class="lead font-white">
             <br>코딩 입문자와 초심자들을 위한 세계<br>C/C++와 Java, Python의<br>기초 문법과 간단한 문제까지<br>천천히 알려주는 사이트입니다.
           </p>
