--- a/Coding_Newbee_World/Python.html
+++ b/Coding_Newbee_World/Python.html
@@ -125,7 +125,7 @@
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #2A9D8F;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Python</h1>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis" style="font-size: 6rem;">Python</h1>
           <p class="lead font-white">
             <br>누구나 쉽게 시작할 수 있는 프로그래밍 언어입니다.<br>
             문법이 간단하고 읽기 쉬워 코딩이 처음인 분께도 적합합니다.<br>
