--- a/Coding_Newbee_World/cpp.html
+++ b/Coding_Newbee_World/cpp.html
@@ -118,7 +118,7 @@
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #1976D2;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">C/C++</h1>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis" style="font-size: 6rem;">C/C++</h1>
           <p class="lead font-white">
             <br>C++은 게임 개발, 시스템 프로그래밍, OS 등<br>
             성능과 유연성을 동시에 필요로 하는 분야에서 각광받고 있습니다.<br>
