--- a/Coding_Newbee_World/ex.html
+++ b/Coding_Newbee_World/ex.html
@@ -118,7 +118,7 @@
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg hero-text" style="background-color: #263238;">
         <!-- 텍스트 영역 -->
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Example</h1>
+          <h1 class="display-4 fw-bold lh-1 text-body-emphasis" style="font-size: 6rem;">Example</h1>
           <p class="lead font-white">
             <br>지금까지 배운 내용을 복습하면서<br>
             문제를 풀어봅시다.<br>
