--- a/Coding_Newbee_World/index.html
+++ b/Coding_Newbee_World/index.html
@@ -237,6 +237,7 @@
           </div>
       </div>
     </footer>
+    <!--javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
