--- a/Coding_Newbee_World/index.html
+++ b/Coding_Newbee_World/index.html
@@ -37,12 +37,12 @@
       .hero-text h1 {
         font-family: 'Montserrat', 'Noto Sans KR', sans-serif;
         font-weight: 700;
-        color: white; /* 메인 텍스트 색상 */
+        color: white;
         text-shadow:
           -1px -1px 0 #fff,
            1px -1px 0 #fff,
           -1px  1px 0 #fff,
-           1px  1px 0 #fff; /* 외곽선 효과 */
+           1px  1px 0 #fff;
       }
      
       .p {
@@ -61,7 +61,7 @@
     <!-- Navbar block -->
     <nav class="navbar navbar-expand-lg bg-light border-bottom">
       <div class="container-fluid">
-        <!-- 좌측 로고 (오른쪽으로 1rem 이동) -->
+        <!-- 좌측 로고 -->
         <a class="navbar-brand fw-bold logo-text ms-5" href="./index.html">
           <img src="img/LogoImg/cnw.png" alt="CNW" style="width: 6.5rem; height: 3.25rem;">
         </a>
