--- a/Coding_Newbee_World/ex.html
+++ b/Coding_Newbee_World/ex.html
@@ -172,9 +172,9 @@
           <div class="content p-3">
             <!--output-->
             <h1 id ="q1">문제 1: "Hello, World!" 출력하기</h1>
-            <h3><strong>설명:</strong> 다음 문장을 <code>출력</code>하는 프로그램을 작성하세요.</h3>
+            <h3><strong>설명:</strong> 콘솔창에 Hello, World를 <code>출력</code>하는 프로그램을 작성하세요.</h3>
             <br>
-            <h4><strong>출력 결과:</strong></h4>
+            <h4><strong>출력 예시:</strong></h4>
             <pre><code class="language-cpp">Hello, World!</code></pre>
             <hr>
             <!--Variable-->
